--- a/poc4/docker-compose.yml
+++ b/poc4/docker-compose.yml
@@ -9,8 +9,9 @@ services:
       - 5778:5778
       - 9411:9411
       - 14268:14268
-    network:
-      telemetry_network
+    networks:
+      telemetry_network:
+        ipv4_address: 172.27.10.6
   mysql:
     image: mysql:latest
     container_name: tele-mysql
@@ -25,8 +26,9 @@ services:
       MYSQL_DATABASE: dev
       MYSQL_USER: jmishra
       MYSQL_PASSWORD: secret
-    network:
-      telemetry_network
+    networks:
+      telemetry_network:
+        ipv4_address: 172.27.10.5
   gateway:
     build: .
     command: gunicorn -b 0.0.0.0:6001 gateway:app
@@ -34,13 +36,14 @@ services:
       - "6001:6001"
     environment:
       JAEGER: "jaeger"
-      DB_MYSQL_HOST: "tele-mysql"
+      DB_MYSQL_HOST: "172.27.10.5"
       DB_MYSQL_PORT: "3306"
-      DB_MYSQL_USER: "jmishra"
+      DB_MYSQL_USER: "root"
       DB_MYSQL_PASSWORD: "secret"
       SERVICE_NAME: "gateway"
-    network:
-      telemetry_network
+    networks:
+      telemetry_network:
+        ipv4_address: 172.27.10.4
   service-1:
     build: .
     command: gunicorn -b 0.0.0.0:6002 service1:app
@@ -48,28 +51,34 @@ services:
       - "6002:6002"
     environment:
       JAEGER: "jaeger"
-      DB_MYSQL_HOST: "tele-mysql"
+      DB_MYSQL_HOST: "172.27.10.5"
       DB_MYSQL_PORT: "3306"
-      DB_MYSQL_USER: "jmishra"
+      DB_MYSQL_USER: "root"
       DB_MYSQL_PASSWORD: "secret"
       SERVICE_NAME: "service-1"
-    network:
-      telemetry_network
+    networks:
+      telemetry_network:
+        ipv4_address: 172.27.10.3
   service-2:
     build: .
     command: gunicorn -b 0.0.0.0:6003 service2:app
     ports:
-      - "6002:6002"
+      - "6003:6003"
     environment:
       JAEGER: "jaeger"
-      DB_MYSQL_HOST: "tele-mysql"
+      DB_MYSQL_HOST: "172.27.10.5"
       DB_MYSQL_PORT: "3306"
-      DB_MYSQL_USER: "jmishra"
+      DB_MYSQL_USER: "root"
       DB_MYSQL_PASSWORD: "secret"
       SERVICE_NAME: "service-2"
-    network:
-      telemetry_network
+    networks:
+      telemetry_network:
+        ipv4_address: 172.27.10.2
 volumes:
   redis-data:
-network:
-  telemetry_network
+networks:
+  telemetry_network:
+    ipam:
+      config:
+        - subnet: 172.27.10.0/24
+          gateway: 172.27.10.1
